[gd_scene load_steps=5 format=3 uid="uid://cxaa046x45suv"]

[ext_resource type="Script" path="res://addons/zalance/store/store.gd" id="1_1riqn"]
[ext_resource type="PackedScene" uid="uid://bhw85att0c57b" path="res://addons/zalance/item/item.tscn" id="3_m6fja"]
[ext_resource type="Theme" uid="uid://b3jrk0l218vf6" path="res://addons/zalance/zalance_theme.tres" id="3_tujj8"]
[ext_resource type="Script" path="res://addons/zalance/item/itemgrid.gd" id="9_2vx7x"]

[node name="ZalanceStore" type="VBoxContainer"]
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_1riqn")

[node name="GridScroll" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ZalanceItemGrid" type="FlowContainer" parent="GridScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
script = ExtResource("9_2vx7x")

[node name="ZalanceItem" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem2" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem3" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem4" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem5" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem6" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem7" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem8" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem9" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="ZalanceItem10" parent="GridScroll/ZalanceItemGrid" instance=ExtResource("3_m6fja")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="Message" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MessageMargin" type="MarginContainer" parent="Message"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0

[node name="StoreMessage" type="RichTextLabel" parent="Message/MessageMargin"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
theme = ExtResource("3_tujj8")
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. this is an error message. "
